--- a/src/styles.css
+++ b/src/styles.css
@@ -21,14 +21,6 @@ main {
   display: block;
 }
 
-.hidden {
-  display: none !important;
-}
-
-.type--center {
-  text-align: center;
-}
-
 .type-header-1,
 .type-header-2,
 .type-header-3 {
@@ -161,4 +153,63 @@ main {
   margin: 0;
   padding-left: 0;
   list-style-type: none;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.type--center {
+  text-align: center;
+}
+
+.marginless {
+  margin: 0 !important;
+}
+
+.floating-button {
+  position: fixed;
+  z-index: 1;
+  top: 12px;
+  width: 32px;
+  height: 32px;
+}
+
+.floating-button button {
+  width: inherit;
+  height: inherit;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  transition: opacity 200ms ease-out;
+}
+
+.floating-button svg {
+  display: block;
+  width: inherit;
+  height: inherit;
+  fill: white;
+  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.3));
+}
+
+.odo-dialog__inner {
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.odo-dialog__close {
+  top: 16px;
+  right: 12px;
+  color: rgb(64, 64, 64);
+}
+
+.dialog-header {
+  padding: 12px 24px;
+  background-color: white;
+}
+
+.dialog-content {
+  padding: 12px 24px;
+  background-color: rgb(247, 247, 247);
 }
