--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ html {
 body {
   margin: 0;
   color: rgb(64, 64, 64);
+  background-color: rgb(240, 240, 240);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.4;
 }
@@ -217,4 +218,33 @@ img {
 .dialog-content {
   padding: 12px 24px;
   background-color: rgb(247, 247, 247);
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  border-bottom: 5px solid #3F976D;
+  margin-bottom: 0;
+  border-radius: 10px;
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  background-color: #4DBA87;
+  text-shadow: 0px -2px #3F976D;
+  cursor: pointer;
+}
+
+.btn:active {
+  transform: translateY(5px);
+  border-bottom-width: 1px;
+  margin-bottom: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .dialog-header,
+  .dialog-content {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
